RESOLVED FIXED135165
[Mac] Cocoa throws exception when the return type of NSAccessibilityLinkedUIElementsAttribute is not an array
https://bugs.webkit.org/show_bug.cgi?id=135165
Summary [Mac] Cocoa throws exception when the return type of NSAccessibilityLinkedUIE...
Myles C. Maxfield
Reported 2014-07-22 11:43:21 PDT
Cocoa throws exception when the return type of NSAccessibilityLinkedUIElementsAttribute is not an array
Attachments
Patch (50.53 KB, patch)
2014-07-22 11:44 PDT, Myles C. Maxfield
simon.fraser: review+
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-07 for mac-mountainlion (510.31 KB, application/zip)
2014-07-22 13:18 PDT, Build Bot
no flags
Myles C. Maxfield
Comment 1 2014-07-22 11:44:35 PDT
Build Bot
Comment 2 2014-07-22 13:18:48 PDT
Comment on attachment 235302 [details] Patch Attachment 235302 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6309395315032064 New failing tests: accessibility/lists.html
Build Bot
Comment 3 2014-07-22 13:18:51 PDT
Created attachment 235310 [details] Archive of layout-test-results from webkit-ews-07 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-07 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Myles C. Maxfield
Comment 4 2014-07-22 13:51:54 PDT
Note You need to log in before you can comment on or make changes to this bug.